# Kitty-enc

./: .gitignore  Cargo.toml  LICENSE  README.md
libsodium-rs-0.2.1-for-knc/: Cargo.toml  Cargo.toml.orig
libsodium-rs-0.2.1-for-knc/src/: crypto_core.rs  crypto_pwhash.rs  crypto_sign.rs  lib.rs  random.rs  utils_impl.rs
libsodium-rs-0.2.1-for-knc/src/crypto_aead/: aegis128l.rs  aes256gcm.rs  chacha20poly1305.rs  mod.rs  xchacha20poly1305.rs
libsodium-rs-0.2.1-for-knc/src/crypto_auth/: mod.rs
libsodium-rs-0.2.1-for-knc/src/crypto_box/: mod.rs
libsodium-rs-0.2.1-for-knc/src/crypto_generichash/: mod.rs
libsodium-rs-0.2.1-for-knc/src/crypto_hash/: mod.rs  sha256.rs  sha512.rs
libsodium-rs-0.2.1-for-knc/src/crypto_pwhash/: argon2i.rs
libsodium-rs-0.2.1-for-knc/src/crypto_scalarmult/: curve25519.rs  ristretto255.rs
libsodium-rs-0.2.1-for-knc/src/crypto_stream/: mod.rs  xchacha20.rs
libsodium-rs-0.2.1-for-knc/src/utils/: mod.rs  vec_utils.rs
libsodium-rs-for-knc/: .cargo_vcs_info.json  .clippy.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
libsodium-rs-for-knc/benches/: crypto_aead_benchmarks.rs  crypto_auth_benchmarks.rs  crypto_benchmarks.rs  crypto_box_benchmarks.rs  crypto_generichash_benchmarks.rs  crypto_hash_benchmarks.rs  crypto_kdf_benchmarks.rs  crypto_kx_benchmarks.rs  crypto_pwhash_benchmarks.rs  crypto_secretbox_benchmarks.rs  crypto_secretstream_benchmarks.rs  crypto_sign_benchmarks.rs
libsodium-rs-for-knc/src/: crypto_core.rs  crypto_ipcrypt.rs  crypto_kdf.rs  crypto_kx.rs  crypto_onetimeauth.rs  crypto_shorthash.rs  crypto_verify.rs  crypto_xof.rs  lib.rs  utils_impl.rs  version.rs
libsodium-rs-for-knc/src/crypto_aead/: aegis256.rs  aes256gcm_state.rs  chacha20poly1305_state.rs  xchacha20poly1305.rs  xchacha20poly1305_state.rs
libsodium-rs-for-knc/src/crypto_core/: ed25519.rs
src/: base256.rs  base_command.rs  cli.rs  cli_help.rs  cli_match.rs  decrypt.rs  encrypt.rs  fix.rs  hash.rs  key_derive.rs  key_management.rs  lib.rs  main.rs  msg.rs  my_enc_dec.rs  read_io.rs  stdout_lock.rs  utils.rs
(+24 files in other folders)
