[package]
name = "kitty_enc"
version = "0.4.4-debug"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
walkdir = "2.5.0"
rand = "0.9.2"
sha2 = "0.10.9"
chacha20poly1305 = "0.10.1"
chrono = "0.4.42"
argon2 = { version = "0.5.3", features = ["zeroize"] }
zeroize = "1.8.2"
dialoguer = { version = "0.12", features = ["password"] }
rayon = "1.11.0"  # 添加 rayon 用于并行处理
ignore = "0.4.25"
hmac = "0.12"
ctrlc = "3.5.1"
lazy_static = "1.5.0"

[profile.release]
panic = "abort"
strip = "symbols"
debug = false